# scramble

.github/workflows/: deploy.yml
client-svelte/src/lib/menus/: AnswerWait.svelte  Guess.svelte
client-svelte/src/routes/: +page.svelte
scramble-client/: Cargo.toml  package.json
scramble-client/src/: app.css  main.rs
scramble-client/src/lib/: Button.svelte  InputField.svelte
scramble-client/src/lib/datatypes/: answer.ts  game.ts  gameSettings.ts  round.ts  wordInfo.ts
scramble-client/src/lib/functions/: requests.ts
scramble-client/src/lib/menus/: Answer.svelte  AnswerWait.svelte  Join.svelte  PlayersAnswer.svelte  Results.svelte  Tile.svelte  Tiles.svelte  tileScores.ts
scramble-client/src/routes/: +page.svelte
scramble-server/: Cargo.toml
scramble-server/src/: dictionary.rs  main.rs  types.rs
