[package]
name = "scramble-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rocket = { version = "0.5", features = ["json"] }
rocket_cors = "0.6.0"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
